# remoteimgui

./: .gitignore  remoteimgui_android.vcxproj  remoteimgui_android.vcxproj.filters
src/app/: CMakeLists.txt  imgui_remote.cpp  imgui_remote.h  imgui_remote_webby.cpp  imgui_remote_webby.h
src/app/example/: addons_examples.pro  imgui_impl_glfw_gl2.cpp  main.cpp
